# acp-cli

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  llms.txt
.github/workflows/: ci.yml  publish.yml
skills/acp-cli/: SKILL.md
skills/acp-cli/references/: agents.md  cli-reference.md  release.md  sessions.md
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: registry.rs
src/bridge/: commands.rs  events.rs  mod.rs
src/cli/: init.rs  mod.rs  prompt.rs  prompt_source.rs  session.rs
src/client/: mod.rs  permissions.rs
src/output/: json.rs  mod.rs  quiet.rs  text.rs
src/queue/: client.rs  ipc.rs  lease.rs  messages.rs  mod.rs  owner.rs
src/session/: history.rs  mod.rs  persistence.rs  pid.rs  scoping.rs
tests/: test_cli.rs  test_config.rs  test_ipc.rs  test_permissions.rs  test_prompt_source.rs  test_registry.rs  test_session.rs
